# mini-opencv

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  _config.yml  create_release.sh  index.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml
.kiro/specs/gpu-image-processing/: tasks.md
_sass/custom/: custom.scss
benchmarks/: benchmark_main.cpp
changelog/: 2026-03-24_correctness-and-ci-hardening.md  DOCUMENTATION_OVERHAUL_SUMMARY.md  PAGES_OPTIMIZATION_SUMMARY.md  RELEASE_v2.1.0.md
docs/: README.md  README.zh-CN.md  _config.yml  index.md  index.zh-CN.md  project-context.md
docs/_sass/custom/: custom.scss
docs/api/: README.md
docs/api.zh-CN/: README.md
docs/architecture/: architecture.md
docs/setup/: installation.md  installation.zh-CN.md  quickstart.md  quickstart.zh-CN.md
docs/tutorials/: faq.md  performance.md
docs/tutorials/examples/: README.md
examples/: basic_example.cpp  pipeline_example.cpp
include/gpu_image/: color_space.hpp  convolution_engine.hpp  cuda_error.hpp  device_buffer.hpp  filters.hpp  geometric.hpp  gpu_image.hpp  gpu_image_processing.hpp  histogram_calculator.hpp  image_io.hpp  image_processor.hpp  image_resizer.hpp  kernel_helpers.hpp  memory_manager.hpp  morphology.hpp  pipeline_processor.hpp  pixel_operator.hpp  stream_manager.hpp  threshold.hpp
include/gpu_image/core/: cuda_error.hpp  device_buffer.hpp  gpu_image.hpp  kernel_helpers.hpp  memory_manager.hpp
include/gpu_image/io/: image_io.hpp
include/gpu_image/operators/: color_space.hpp  convolution_engine.hpp  filters.hpp  geometric.hpp  histogram_calculator.hpp  image_resizer.hpp  morphology.hpp  pixel_operator.hpp  threshold.hpp
include/gpu_image/processing/: image_processor.hpp  pipeline_processor.hpp
include/gpu_image/utils/: stream_manager.hpp
openspec/changes/archive/2026-04-23-gpu-image-processing-init/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-gpu-image-processing-init/specs/: delta.md
openspec/specs/: architecture.md
openspec/specs/gpu-image-processing/: api.md  design.md  requirements.md
specs/: README.md
specs.legacy/: README.md
specs.legacy/api/: README.md
specs.legacy/rfc/: 0001-gpu-image-processing-tasks.md
specs.legacy/testing/: README.md
specs/db/: README.md
specs/product/: gpu-image-processing-requirements.md
specs/rfc/: 0001-gpu-image-processing-design.md
src/: color_space.cu  convolution_engine.cu  cuda_error.cpp  device_buffer.cu  filters.cu  geometric.cu  histogram_calculator.cu  image_io.cpp  image_processor.cpp  image_resizer.cu  memory_manager.cpp  morphology.cu  pipeline_processor.cu  pixel_operator.cu  stream_manager.cu  threshold.cu
src/core/: cuda_error.cpp  device_buffer.cu  memory_manager.cpp
src/io/: image_io.cpp
src/operators/: color_space.cu  convolution_engine.cu  filters.cu  geometric.cu  histogram_calculator.cu  image_resizer.cu  morphology.cu  pixel_operator.cu  threshold.cu
src/processing/: image_processor.cpp  pipeline_processor.cu
src/utils/: stream_manager.cu
tests/: test_color_space.cpp  test_convolution.cpp  test_device_buffer.cpp  test_filters.cpp  test_geometric.cpp  test_histogram.cpp  test_morphology.cpp  test_pipeline.cpp  test_pixel_operator.cpp  test_resizer.cpp  test_threshold.cpp
tests/core/: test_device_buffer.cpp
tests/operators/: test_color_space.cpp  test_convolution.cpp  test_filters.cpp  test_geometric.cpp  test_morphology.cpp  test_resizer.cpp
tests/processing/: test_pipeline.cpp
